--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -1,14 +1,10 @@
-name: deploy_frontend
+name: Blob storage website CI
 
 on:
     push:
         branches: [ main ]
         paths:
             - 'frontend/**'
-
-permissions:
-      id-token: write
-      contents: read
 
 jobs:
   build:
@@ -17,20 +13,18 @@ jobs:
     - uses: actions/checkout@v3
     - uses: azure/login@v2
       with:
-      client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --account-name resumestorageleela01 --auth-mode key -d '$web' -s frontend/
+            az storage blob upload-batch --account-name resumestorageleela01 --auth-mode key -d '$web' -s 'frontend/dist'
     - name: Purge CDN endpoint
       uses: azure/CLI@v1
       with:
         inlineScript: |
-           az cdn endpoint purge --content-paths  "/*" --profile-name "azureresumeleela" --name "azureresumeleela" --resource-group "azureresume-rg"
+           az cdn endpoint purge --content-paths  "/*" --profile-name "CDN_PROFILE_NAME" --name "CDN_ENDPOINT" --resource-group "RESOURCE_GROUP"
 
   # Azure logout
     - name: logout
